--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Set up correct branch environment variable
         run: |
           if [ $GITHUB_REF_NAME == "master" ]; then
-            echo 'NIGHTLY_BUILD_REF="api-call"' >> $GITHUB_ENV
+            echo "NIGHTLY_BUILD_REF=api-call" >> $GITHUB_ENV
           else
-            echo 'NIGHTLY_BUILD_REF="$GITHUB_REF_NAME"' >> $GITHUB_ENV
+            echo "NIGHTLY_BUILD_REF=$GITHUB_REF_NAME" >> $GITHUB_ENV
           fi
       - name: Print env
         run: env
