--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,12 @@ on:
   schedule:
     - cron: '05 17 * * *'
   workflow_dispatch:
+    inputs:
+      force_exact_ref_name:
+        description: 'Forces exact ref name defined by GITHUB_REF_NAME, instead of attempting to default to api-call'
+        required: false
+        default: false
+        type: boolean
 jobs:
   example:
     name: Example Job
